--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,8 +1,3 @@
-.about__list{
-  display: flex;
-  gap: 30.26px;
-}
-
 .member__item,
 .member__link{
   background-color: $detail-color;
@@ -25,6 +20,13 @@
 }
 
 .about{
+  &__title{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
   &__imgcontainer{
     position: relative;
     overflow: visible;  
@@ -45,5 +47,10 @@
     text-align: center;
     color: $detail-color;
     background-color: rgba(47, 48, 58, 0.8);
+  }
+  &__list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
   }
 }
