--- a/sass/components/_benefit.scss
+++ b/sass/components/_benefit.scss
@@ -1,7 +1,14 @@
 .benefit{
   &__item{
-    width: 270px;
-    height: 101px;
+    width: 100vw;
+    height: 226px;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
+  &__title{
+    text-align: center;
     font-size: 14px;
     font-weight: 700;
     line-height: 1.17;
@@ -16,23 +23,16 @@
   }
   &__list{
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
   }
   &__list-icon{
     background-color: rgba(245, 244, 250, 1);
     border-radius: 4px;
-    width: 270px;
+    width: 100%;
     height: 120px;
     display:flex;
     align-items: center;
     justify-content: center;
   }
-}
-
-.about__title{
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
 }
