--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,8 @@
 .header{
   border-bottom: 1px solid rgba(236, 236, 236, 1);
+  &__navigation{
+    display: flex;
+  }
   &__title{
     color: $primary-color;
     text-decoration: none;
