--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -1,13 +1,14 @@
 .main{
   &__bg{
   background-color: $bg-color;
-  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(0, 0, 0, 0.4)), url('../images/fondomain.jpg');
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(0, 0, 0, 0.4)), url('../images/img_mobile.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   }
   &__hero{
-    height: 600px;
+    height: 100vw;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,11 +17,12 @@
   }
   &__title{
     color: $detail-color;
-    font-size: 44px;
+    font-size: 26px;
     font-weight: 900;
-    line-height: 1.36;
+    line-height: 1.61;
     letter-spacing: 0.06em;
     text-align: center;
+    max-width: 360px;
   }
   &__button{
     color: $detail-color;
