--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -9,6 +9,7 @@
   }
   &__list{
     display: flex;
+    flex-wrap: wrap;
     gap: 30.26px;
     flex-basis: calc((100% - 90px) / 4);
     & .team__member{
@@ -16,6 +17,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      width: 100VW;
       padding-bottom: 30px;
       background-color: $detail-color;
       border-radius: 0px 0px 4px 4px;
@@ -28,6 +30,10 @@
   &__list{
     display: flex;
     gap: 10px;
+  }
+  &__img{
+    width: 100%;
+    height: auto;
   }
   &__name{
     text-align: center;
@@ -43,6 +49,40 @@
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.03em;
+  }
+  &__item{
+    background-color: $detail-color;
+    fill: $detail-icon;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms $cubic, color 250ms $cubic;
+    &:hover,
+    &:focus{
+    fill: $detail-color;
+    background-color: $primary-color;
+    cursor: pointer;
+    }
+  } 
+  &__link{
+    background-color: $detail-color;
+    fill: $detail-icon;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms $cubic, color 250ms $cubic;
+    &:hover,
+    &:focus{
+    fill: $detail-color;
+    background-color: $primary-color;
+    cursor: pointer;
+  }
   }
 }
 
