--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,4 +10,5 @@
 @import "./components/team";
 @import "./components/client";
 @import "./components/footer";
-@import "./components/modal"
+@import "./components/modal";
+@import "./components/responsive";
