--- a/sass/components/_responsive.scss
+++ b/sass/components/_responsive.scss
@@ -35,7 +35,7 @@
   z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
-  & .is-open {
+  &.is-open {
     transform: translateX(0);
   }
   & .menu-toggle {
@@ -63,6 +63,7 @@
 
   &--social {
     display: flex;
+    flex-wrap: wrap;
     text-decoration: none;
     font-size: 40px;
     font-weight: 500;
@@ -75,7 +76,7 @@
   & .mobile__link--tel {
     color: $primary-color;
     font-size: 34px;
-    padding-top: 350px;
+    padding-top: 10vh;
   }
 
   & .mobile__link--email {
@@ -100,11 +101,17 @@
     border: 0;
   }
 
-  & .mobile__link:hover {
+  & .mobile__link:hover,
+  .mobile__link:focus{
     color: $primary-color;
   }
 
-  &--social .mobile__link--social:hover {
+  & .mobile__link--tel:hover,
+  .mobile__link--tel:focus{
+    color:  rgb(33, 33, 33) ;
+  }
+
+  &--social .mobile__link--social:hover, .mobile__link--social:focus {
     color:  rgb(33, 33, 33);
 }
 }
