--- a/sass/main.css
+++ b/sass/main.css
@@ -847,7 +847,7 @@ body {
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
   }
-  .menu-container .is-open {
+  .menu-container.is-open {
     transform: translateX(0);
   }
   .menu-container .menu-toggle {
@@ -873,6 +873,7 @@ body {
   }
   .mobile-menu--social {
     display: flex;
+    flex-wrap: wrap;
     text-decoration: none;
     font-size: 40px;
     font-weight: 500;
@@ -884,7 +885,7 @@ body {
   .mobile-menu .mobile__link--tel {
     color: rgb(33, 150, 243);
     font-size: 34px;
-    padding-top: 350px;
+    padding-top: 10vh;
   }
   .mobile-menu .mobile__link--email {
     color: rgb(175, 177, 184);
@@ -905,10 +906,15 @@ body {
   .mobile-menu--social .border {
     border: 0;
   }
-  .mobile-menu .mobile__link:hover {
+  .mobile-menu .mobile__link:hover,
+  .mobile-menu .mobile__link:focus {
     color: rgb(33, 150, 243);
   }
-  .mobile-menu--social .mobile__link--social:hover {
+  .mobile-menu .mobile__link--tel:hover,
+  .mobile-menu .mobile__link--tel:focus {
+    color: rgb(33, 33, 33);
+  }
+  .mobile-menu--social .mobile__link--social:hover, .mobile-menu .mobile__link--social:focus {
     color: rgb(33, 33, 33);
   }
   .header__navigation {
